Fixed word wrap on users profiles

--- a/html/files/css/profile.scss
+++ b/html/files/css/profile.scss
@@ -260,6 +260,7 @@
 
     .profile-extra {
         margin-top: 10px;
+        word-wrap: break-word;
 
         .medal a {
             color: $black;
